Ingredient history and icons

--- a/Form1.resx
+++ b/Form1.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAEssAABLLAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//
+        /wD///8A////A////wb///8F////Af///wD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD///8A////AP//
+        /wb///8q////X////43///+q////t////7T///+j////gP///07///8b////Av///wAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////AP//
+        /wj///9J////qPj4+Oba2tn9tLSx/5aWkv+Hh4X/ioqH/56emv/AwL3/5ubl+f39/dj///+L////LP//
+        /wL///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA////AP//
+        /wD///8n////oPHx8fOsrKn/VVVY/yUlQP8YGFT/GBhu/xsbfP8aGnn/GBhm/xkZS/8vL0H/bm5t/8fH
+        xf/6+vri////dv///xD///8A////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//
+        /wD///8A////RP7+/tLFxcT/TExQ/xYWTP8hIZ7/MjLb/zk59P87O/v/Ozv9/zs7/P86Ovr/Nzfv/y4u
+        zP8cHIL/HR0+/3BwcP/i4uL7////qv///x////8A////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD///8A////AP///0j7+/vhn5+d/yEhOf8gIJT/Nzft/zs7/f86Ovv/Ojr5/zo6+f86Ovn/Ojr5/zo6
+        +f86Ovr/Ozv8/zs7/P8yMtv/Fxds/z09Rf/Ly8r/////uv///x////8A////AAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA////AP///wD///8y/f392ZmZl/8YGD3/KyvB/zs7/P86Ovr/Ojr5/zo6+f86Ovn/Ojr5/zo6
+        +f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+/85Ofb/Hx+T/y8vPP/Ly8n/////qv///xD///8AAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD///8A////EP///7S2trT/HBw6/y0txv87O/3/Ojr5/zo6+f86Ovn/Ojr5/zo6
+        +f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+v86Ovr/Hx+T/z09Rf/i4uH8////d///
+        /wD///8AAAAAAAAAAAAAAAAA////AP///wD///9m5OTj+zg4Qv8kJKf/Ozv9/zo6+f86Ovn/Ojr5/zo6
+        +f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+v85Ofb/GBhs/3Bw
+        cP/7+/vh////Lv///wAAAAAAAAAAAAAAAAD///8A////FP///8mJiYf/Fxdj/zk59v86Ovn/Ojr5/zo6
+        +f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zs7
+        +/8yMtr/Hh4//8bGxP////+L////AP///wAAAAAAAAAAAP///wD///9Q5+fm+DU1Q/8rK8H/Ozv8/zo6
+        +f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6
+        +f86Ovn/Ojr5/zs7/P8cHIP/bm5u//7+/tf///8c////AAAAAAD///8A////AP///5Ozs7H/GBhQ/zg4
+        8f86Ovr/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6
+        +f86Ovn/Ojr5/zo6+f86Ovn/Ozv8/y4uzf8wMEL/5eXk+f///07///8AAAAAAP///wD///8M////w35+
+        fP8bG4D/Ozv9/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6
+        +f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovr/Nzfv/xoaTP/AwL3/////gP///wD///8A////AP//
+        /xz8/PzdWVlc/yQkp/87O/3/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6
+        +f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovn/Ojr5/zo6+f86Ovr/GBhm/56em/////+i////Af//
+        /wD///8A////J/b29uhHR0//KCi6/zs7/f87O/n/Ozv5/zw8+v89Pfr/Pj76/z8/+/8/P/v/QED7/0BA
+        +/9AQPv/QED7/0BA+/9AQPv/Pz/7/z4++/8+Pvr/PT36/zw8+v87O/n/Ojr5/zs7/P8aGnn/ioqI////
+        /7T///8F////AP///wD///8p9fX16UVFTv8wMMD/RUX//0ZG/v9ISP7/SUn+/0pK//9KSv//Skr//0tL
+        //9LS///S0v//0tL//9LS///S0v//0tL//9LS///Skr//0pK//9JSv//SUn+/0hI/v9GRv7/RUX//x8f
+        ff+Hh4X/////tv///wb///8A////AP///yD6+vrhUlJW/zU1rPRXV//5VFT8/U1N/flNTf77TEz+/ExM
+        /v1MTP/+S0v//ktL//9LS///S0v//0tL//9LS///S0v//0tL//5MTP/+TEz+/UxM/vxNTf37Tk79+FNS
+        /flZWP/4JiZt/JWVk/////+q////A////wD///8A////Ef///81vb2//WFRe0cbB0+u9udL1qKHOtZKL
+        yKCPiMyli4XOqYiD0KuGgdKthH/Ur4N+1LCDftSwg37UsIR/1K+FgNOuh4HSrYmD0KuMhs6okInLpJSN
+        xp+moM6qxMHkzMbD3Mo8O0LusrKx/////43///8A////AP///wD///8C////pZ+foP9NS0b7bGlg/mRh
+        Wf/W0L/k1sywlcq+nXzLv55+y7+efsu/nn7Lv55+y7+efsu/nn7Lv55+y7+efsu/nn7Lv55+y7+efsu/
+        nn7Kvp19zsKkguzo3MD49/Lox8O6yTg4NvbY2Nj+////X////wAAAAAA////AP///wD///9x0tLS/xwc
+        HP8cJTD/Hik1/2BdWP/UzsDl08iyl8a6oH7Hu6GAx7uhgMe7oYDHu6GAx7uhgMe7oYDHu6GAx7uhgMe7
+        oYDHu6GAxrqgf93Wx6Px7+vc7uvl0u/r5MeDgXvWWFhY//j4+Ob///8q////AAAAAAD///8A////JfLy
+        8sF4eHj/ICo2/1V0mP9XeJ3/Ii47/2BdWP/UzsDl08iyl8a6oH7Hu6GAx7uhgMe7oYDHu6GAx7uhgMe7
+        oYDHu6GAx7uhgMa6n3/c1cai9vX08Pn6+v/19PLp2NXMwzw7Oe2pqan/////qP///wX///8AAAAAAP//
+        /yv09PTAeHh4/yArNv9UdJf/Y4q1/2OKtf9XeJz/Ii47/2BdWP/UzsDl08iyl8a6oH7Hu6GAx7uhgMe7
+        oYDHu6GAx7uhgMe7oYDGup9/1s68l/X08er5+fr/+fn5//f18ud5d3LZT09P/vDw8PL///9J////AP//
+        /wAAAAAA////S+rq6uZHR0f/KDhK/1+Cqv9jirb/Y4u3/2OKtf9XeJz/Ii47/2BdWP/UzsDl08iyl8a6
+        oH7Hu6GAx7uhgMe7oYDHu6GAx7qgf83DrInx7+ra+fn6//n5+f/8+/v6sbCs4DEwL/bDw8P/////n///
+        /wf///8AAAAAAAAAAAD///8B////VdfX1+hERkf/L0FV/16Cqv9jirb/Y4u3/2OKtf9XeJ3/Ii47/2Ff
+        Wf/SzL7l0cexmMe7oX/Hu6GAx7uhgMe7oYDFuJ194NrNq/n5+f35+fn/+/r59bq4teQyMTDznZ2d////
+        /9H///8n////AP///wAAAAAAAAAAAP///wD///8B////VtfW1uhERUb/L0FV/16Cqv9ji7b/Y4u3/2OK
+        tP9TcpX/FBkg/4SAeP/h2svZyr6lhsa6oH/GuqB/yLyigc7Erovl4NW29vTw4uzq5tuSkIzdMDAu9ZeX
+        l//7+/vh////RP///wD///8AAAAAAAAAAAAAAAAAAAAAAP///wD///8B////VtfW1uhERUb/L0FV/16C
+        qv9jirX/XoKp/yw+Uv8xMTD/vrmt8t3UwKjQxayD1MqzitvTwJfk3tCo6eXaud7a0cKmopzNSklG5T4+
+        Pvu1tbX//f392v///0j///8A////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wD///8B////VtfW
+        1uhERUb/L0FV/1p8of8vQVX/Kiss/zc2NP9HRT/pXVlRw4iFfMOempPIn5yVz4uJg9VmZGDePj077T09
+        PfqIiIj/5OTk+v///7X///8x////AP///wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//
+        /wD///8B////VtfW1uhFR0j/FB4o/0lKS//Z2dn52tra/J+fn/9wcHD/VVVV/0tLS/5NTUz+W1tb/3x8
+        fP+xsrL/5+fn+f7+/sr///9n////EP///wD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP///wD///8B////VtTU1Oh2dnX/19fX5P///2H///9k////pf///876+vri9fX16fb2
+        9uj8/Pzd////w////5P///9Q////FP///wD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wD///8B/v7+Vvz8/M3+/v5R////AP///wD///8D////Ef//
+        /yH///8p////J////xz///8M////Af///wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wD///8E////Hv///wP///8AAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///////8P///wAP//wAA//4AAH/8AAA/+AAAH/AAAA/gAAAP4AAAB8AA
+        AAfAAAADwAAAA4AAAAOAAAABgAAAAYAAAAGAAAABgAAAA4AAAAPAAAADgAAAAwAAAAcAAAAHAAAAD4AA
+        AB/AAAA/4AAAf/AAAP/4AAP//DAP//4///8=
+</value>
+  </data>
 </root>
