--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -139,6 +139,9 @@
   <data name="Crystal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Crystal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DayDial" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DayDial.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Eye" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Eye.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
