--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -187,6 +187,9 @@
   <data name="RollUp" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\RollUp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SellIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SellIcon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="SellOverlay" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SellOverlay.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
