--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -199,4 +199,10 @@
   <data name="Shroom" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Shroom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="TrashClosed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TrashClosed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="TrashOpen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TrashOpen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
