--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -172,6 +172,9 @@
   <data name="PaperRoll" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PaperRoll.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="PlayButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PlayButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="PotionBase" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PotionBase.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -183,9 +186,6 @@
   </data>
   <data name="PotionStopper" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PotionStopper.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="RockCauldron" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\RockCauldron.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="RollDown" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\RollDown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -201,6 +201,9 @@
   </data>
   <data name="Shroom" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Shroom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Title" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Title.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="TrashClosed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\TrashClosed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
